fixed issue with vh on mobile (no scroll)

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,16 +21,14 @@ body {
   display: flex;
   flex-direction: column;
   background-color: white;
-  height: 100%;
 }
 
 .img-container {
   position: relative;
-  height: 100%;
   background-image: url('../assets/bg-green.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 200px;
 }
 
@@ -48,19 +46,67 @@ h1 {
   color: white;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+p {
+  font-size: 18px;
+  font-weight: 700;
+}
+.top-content {
+  background-color: gainsboro;
+  padding: 10px;
+}
+
+.form-content {
+  padding: 10px;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+form label {
+  display: block;
+}
+
+form input {
+  width: 230px;
+  padding: 10px;
+}
+
+.bottom-content {
+  background-color: gainsboro;
+  padding: 10px;
+}
+
 @media only screen and (min-width: 900px) {
   .wrapper {
     flex-direction: row;
+    height: 100vh;
   }
 
   .img-container {
     min-width: 500px;
-    height: 100vh;
+    height: 100%;
   }
 
   .img-container img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  form {
+    justify-content: flex-start;
+  }
+
+  form input {
+    width: 300px;
   }
 }
